# vpc-II

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 1_DesarrolloGeneral_Conclusiones.ipynb  5_FasterRCNN_training.ipynb  EDA.ipynb  FasterRCNN_training.ipynb
results/faster_rcnn_results/summary/11-10-2024-21-04-26/: events.out.tfevents.1728691466.Isidro-Marco.157826.0
results/retina_results/dataset_1/train_1/: events.out.tfevents.1728664794.70ef33bad1c1.633.0  metrics.json
results/retina_results/dataset_1/train_1/inference/: coco_instances_results.json
results/retina_results/dataset_2/train_1/: events.out.tfevents.1728684689.70ef33bad1c1.633.2  metrics.json
results/retina_results/dataset_2/train_1/inference/: coco_instances_results.json
results/retina_results/dataset_3/train_1/: coco_instances_results.json  events.out.tfevents.1728734645.c16dc46fbd38.291.1  metrics.json
results/retina_results/dataset_3/train_1/inference/: coco_instances_results.json
results/yolo_results/nano_model/: args.yaml  events.out.tfevents.1728666161.f1ab36b0405c.3481.8  results.csv
results/yolo_results/s_model/: args.yaml  events.out.tfevents.1728668233.f1ab36b0405c.3481.9  results.csv
results/yolo_results/s_model_1280/: args.yaml  events.out.tfevents.1728669044.f1ab36b0405c.3481.10  results.csv
