[tool.poetry]
name = "vpc-ii"
version = "0.1.0"
description = ""
authors = ["Diego <sarinadiego@gmail.com>"]
readme = "README.md"
packages = [{include = "vpc_ii"}]

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.3.9"
roboflow = "^1.1.47"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
sns = "^0.1"
ipynb = "^0.5.1"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
